trunk/Archive2/63/09ad030fce2afc/output
main.cpp:27:28: error: array bound cannot be deduced from an in-class initializer
    DescriptorByte array[] = {
                           ^
main.cpp:18:35: error: use of undeclared identifier 'TRUE'
    DescriptorByte ADD_8_OI =   { TRUE, FALSE, TRUE, OPBASE + IMMED_8 };
                                  ^
main.cpp:18:41: error: use of undeclared identifier 'FALSE'
    DescriptorByte ADD_8_OI =   { TRUE, FALSE, TRUE, OPBASE + IMMED_8 };
                                        ^
main.cpp:18:48: error: use of undeclared identifier 'TRUE'
    DescriptorByte ADD_8_OI =   { TRUE, FALSE, TRUE, OPBASE + IMMED_8 };
                                               ^
main.cpp:18:54: error: use of undeclared identifier 'OPBASE'
    DescriptorByte ADD_8_OI =   { TRUE, FALSE, TRUE, OPBASE + IMMED_8 };
                                                     ^
main.cpp:18:63: error: use of undeclared identifier 'IMMED_8'
    DescriptorByte ADD_8_OI =   { TRUE, FALSE, TRUE, OPBASE + IMMED_8 };
                                                              ^
main.cpp:19:35: error: use of undeclared identifier 'TRUE'
    DescriptorByte ADD_32_OI =  { TRUE, FALSE, TRUE, OPBASE + IMMED_32 };
                                  ^
main.cpp:19:41: error: use of undeclared identifier 'FALSE'
    DescriptorByte ADD_32_OI =  { TRUE, FALSE, TRUE, OPBASE + IMMED_32 };
                                        ^
main.cpp:19:48: error: use of undeclared identifier 'TRUE'
    DescriptorByte ADD_32_OI =  { TRUE, FALSE, TRUE, OPBASE + IMMED_32 };
                                               ^
main.cpp:19:54: error: use of undeclared identifier 'OPBASE'
    DescriptorByte ADD_32_OI =  { TRUE, FALSE, TRUE, OPBASE + IMMED_32 };
                                                     ^
main.cpp:19:63: error: use of undeclared identifier 'IMMED_32'
    DescriptorByte ADD_32_OI =  { TRUE, FALSE, TRUE, OPBASE + IMMED_32 };
                                                              ^
main.cpp:20:35: error: use of undeclared identifier 'TRUE'
    DescriptorByte PUSH_ES =    { TRUE, FALSE, TRUE, OPBASE };
                                  ^
main.cpp:20:41: error: use of undeclared identifier 'FALSE'
    DescriptorByte PUSH_ES =    { TRUE, FALSE, TRUE, OPBASE };
                                        ^
main.cpp:20:48: error: use of undeclared identifier 'TRUE'
    DescriptorByte PUSH_ES =    { TRUE, FALSE, TRUE, OPBASE };
                                               ^
main.cpp:20:54: error: use of undeclared identifier 'OPBASE'
    DescriptorByte PUSH_ES =    { TRUE, FALSE, TRUE, OPBASE };
                                                     ^
main.cpp:21:35: error: use of undeclared identifier 'TRUE'
    DescriptorByte POP_ES =     { TRUE, FALSE, TRUE, OPBASE };
                                  ^
main.cpp:21:41: error: use of undeclared identifier 'FALSE'
    DescriptorByte POP_ES =     { TRUE, FALSE, TRUE, OPBASE };
                                        ^
main.cpp:21:48: error: use of undeclared identifier 'TRUE'
    DescriptorByte POP_ES =     { TRUE, FALSE, TRUE, OPBASE };
                                               ^
main.cpp:21:54: error: use of undeclared identifier 'OPBASE'
    DescriptorByte POP_ES =     { TRUE, FALSE, TRUE, OPBASE };
                                                     ^
19 errors generated.
